--- a/surferpage/templates/index.gohtml
+++ b/surferpage/templates/index.gohtml
@@ -8,9 +8,8 @@
 </head>
 <body>
 <img src="pics/surf.jpg" alt="Surfing in the Pacific">
-<h1 id="elem01">Header 001</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Accusamus beatae enim inventore ratione tempora!
+<h1 id="elem01">Senior Night</h1>
+<p>The best soccer player at High Blah blah, come join us Wed. @ 5pm!!!
     Asperiores deleniti, deserunt dolorem ducimus ex impedit maiores, minima minus quam quos rerum similique veritatis, voluptate.</p>
 <p>Aperiam corporis cupiditate deserunt dicta expedita fuga ipsum necessitatibus numquam quaerat quam sapiente, soluta
     ut velit. Autem dolore dolores eos impedit iure laudantium magnam magni, numquam officia rerum, unde voluptas?</p>
